# terracube-ideas

./: .gitignore  AGENTS.md  ANALYSIS.md  API_DOCUMENTATION.md  CLAUDE.md  DEPLOYMENT.md  DOCKER_STATUS.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_READINESS.md  README.md  Review_2.md  Review_3.md  TESTING_VERIFICATION_REPROT.md  docker-compose.yml  package-lock.json  setup_and_test.sh
backend/: Dockerfile  alembic.ini  probe_dggal.py  pyetest.toml  pyproject.toml  verify_dggs.py
backend/app/: auth.py  authorization.py  cache.py  celery_app.py  config.py  db.py  dggal_utils.py  exceptions.py  init_db.py  logging_config.py  main.py  models.py  models_annotations.py  models_stac.py  rate_limiter.py  seed.py
backend/app/repositories/: base.py  cell_object_repo.py  dataset_repo.py  upload_repo.py  user_repo.py
backend/app/routers/: analytics.py  annotations.py  auth.py  datasets.py  high_vibe.py  jobs.py  marketplace.py  ogc.py  ops.py  prediction.py  spatial_analysis.py  stac.py  stats.py  stats_enhanced.py  temporal.py  toolbox.py  topology.py  upload_status.py  uploads.py
backend/app/scripts/: init_data.py  init_database.py  load_real_data.py  populate_topology.py
backend/app/services/: annotations.py  datacube.py  (+17 more)
backend/db/: schema.sql
backend/terracube_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/tests/: __init__.py  test_auth_validation.py  test_chaos.py  test_marketplace.py  test_multi_res_loader.py  test_spatial_ops_db.py  test_spatial_ops_topology.py  test_stac_discovery.py  test_toolbox_integration.py  test_vector_ingest.py
(+103 files in other folders)
