[project]
name = "terracube-backend"
version = "0.1.0"
description = "IDEAS Backend API in Python"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.1",
    "minio>=7.2.9",
    "rasterio>=1.3.10",
    "httpx>=0.27.0",
    "email-validator>=2.0.0",
    "python-multipart>=0.0.9",
    "dggal>=0.0.1",
    "celery[redis]>=5.3.6",
    "redis>=5.0.1",
    "sqlalchemy>=2.0.30",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "shapely>=2.0.0"
]

[tool.setuptools]
packages = ["app"]
